apps/namespaces/networking/envoy-gateway-helm/resources/gateway-internal.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: internal
  namespace: networking
  annotations:
    cert-manager.io/cluster-issuer: ca-issuer
spec:
  gatewayClassName: eg
  addresses:
    - type: IPAddress
      value: 192.168.20.195
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      hostname: "*.sass.home"
      protocol: HTTPS
      port: 443
      tls:
        mode: Terminate
        certificateRefs:
          - name: wildcard-sass-home-tls
      allowedRoutes:
        namespaces:
          from: All
